@@ -1,3 +1,10 @@
+2005-10-21  Vincent Noel <vnoel@cox.net>
+
+	* log_repaint.c: (logview_create_model):
+	* logrtns.c: (logline_get_date_string), (logline_new_from_string),
+	(string_get_date_string), (log_read_dates), (log_close):
+	* misc.c: (string_get_date): Play well with extra spaces.
+
 2005-10-21  Vincent Noel  <vnoel@cox.net>
 
 	* log_repaint.c (model_fill_iter): Calls to strftime are very
